--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 
 dependencies:
+  dio: ^5.4.0
+  retrofit: ^4.0.1
+  json_annotation: ^4.8.1
+
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
@@ -39,12 +43,20 @@ dependencies:
 
 
 
+
+
+
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.3.0
 
 dev_dependencies:
+  retrofit_generator: ^7.0.8
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
   change_app_package_name: ^1.1.0
